feat: implement apis to handle quiz submit and scores leaderboard
